# studies

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
abi-compat/: CMakeLists.txt  test_super.cxx
abi-compat/libsuper/: CMakeLists.txt
abi-compat/libsuper/include/: super.h
abi-compat/libsuper/src/: super.c
abi-compat/super/: CMakeLists.txt
abi-compat/super/include/super/: super.h
abi-compat/super/src/: CMakeLists.txt  super.cxx
alu/: CMakeLists.txt  alu.c  alu.h  alu_test.cpp
any/: CMakeLists.txt  main.cxx  util.h  v1.h  v2.h
cgreen-test/: CMakeLists.txt  mylib.c  mylib.h  test_mylib.c
ch32_string_matching/: CMakeLists.txt  match_test.cpp  plsearch.h
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
cstr/: CMakeLists.txt  cstr.bench.cxx  cstr.c  cstr.h  cstr.test.cxx  cstr_header.h
dawg/: CMakeLists.txt  dawg.cpp  dawg.h  iconv.h  mafsa.cpp  mafsa.h  makedawg.cpp  mkiconv.py  scratch  test_dawg.cpp  test_dawg.cpp.old
diffs/: CMakeLists.txt  diffs_test.cpp
flatbuffers/: CMakeLists.txt  main.cpp  monsters.schema  monsters_generated.h  trie.fbs  trie_generated.h
fp/: CMakeLists.txt  bin2dec.py  bincvt.py  dec2bin.py  examples.txt  fp.cxx  fp.h  fp.test.cxx  half.hpp  play.cxx
gentable/: CMakeLists.txt  gen_test_cases.py  gentable_v1.h  gentable_v2.h  simdtests.cpp  test_gentable.cpp
idvec/: CMakeLists.txt  idvec.h  idvec.test.cxx  small_vector.h
integer/: CMakeLists.txt  intalu.c  intalu.cpp  intalu.h  intalu_test.c  intalu_test.cpp
ld_preload/: CMakeLists.txt  main.cxx  unrandom.c  unrandom.h
linalg/: CMakeLists.txt  linalg.cxx  linalg.h  main.cxx
mafsa/: CMakeLists.txt  bench_arrays.cpp  bench_data.h  darray.cpp  darray.fbs  darray.h  darray2.cpp  darray2.h  darray3.cpp  darray3.h  darray_generated.h  fuzzish.cpp  gen.sh  iconv.h  mafsa.cpp  mafsa.h  mafsa2.cpp  mafsa2.h  mafsa_generated.h  mkarrays.cpp  mkiconv.py  serializers.h  tarray.cpp  tarray.h  tarray_generated.h  tarray_util.cpp  tarray_util.h  tarraydelta.cpp  tarraydelta.h  tarraysep.cpp  tarraysep.h  test_arrays.cpp
mafsa/schemas/: darray.fbs  mafsa.fbs  tarray.fbs
optional/: CMakeLists.txt  main.cxx  optional.hpp
perfect_hashing/: CMakeLists.txt  README.md  function_search_bench.cxx
string_matching/: CMakeLists.txt  match_test.cpp  naive.h  plsearch.h
tcpip/: CMakeLists.txt  main.cxx
tools/: gdb_macros
vtbl/: CMakeLists.txt  vtbl.cxx
wc/: CMakeLists.txt  geninputs.py  my_simd.h  wc_2.c  wc_serial.c  wc_simd.c
